2008-06-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py (Cursor.callproc): Corrected bug in type mapping in
	callproc (thanks to report by Skip Montanaro)

2008-06-17  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Optimization: reuse command and cursor when calling
	cursor.execute with same request

	* Sybase.py: Use ct_setparam to define ct_cursor parameters types
	instead of ct_param

	* Sybase.py: Use CS_DATETIME_TYPE when passing CS_DATE_TYPE to
	ct_setparam with NULLDATA to avoid a sybase limitation

	* cmd.c: Adding ct_cmd_props wrapper

	* Adding implicit conversion for CS_DATE_TYPE in CS_DATETIME_TYPE DataBuf

	* sybasect.c: Adding CS_HAVE_CUROPEN property

	* cmd.c: Correct passing CS_NULLDATA to ct_setparam
	
	* databuf.c: Correct passing None in a DataBuf (thanks to patch by
	Bram Kuijvenhoven)

2008-06-12  Sébastien Sablé  <sable@users.sourceforge.net>

	* Increase DataBuf maxlength for params of a request when using
	CS_CHAR_TYPE params so that the buf can be reused

2008-04-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* Support for extra paramstyle 'numeric'

	* Releasing version 0.39

2008-02-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected "undefined symbol" date_datafmt for Sybase versions
	where CS_DATE_TYPE is not defined (as reported by Alexey Morsov)

2008-02-12  Sébastien Sablé  <sable@users.sourceforge.net>

	* Releasing version 0.39pre1

2008-01-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* setup.py: Better detection of Sybase libraries

	* Sybase.py: Better thread safety

2008-01-04  Sébastien Sablé  <sable@users.sourceforge.net>

	* setup.py: the C API to datetime only exists since python 2.4 - disable datetime with previous versions

2007-10-19  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected python long handling (using CS_NUMERIC instead of CS_LONG which is unspecified)

2007-10-18  Sébastien Sablé  <sable@users.sourceforge.net>
